service/tests/requests/snapshots/auth/can_change_password_with_authorization_header@auth.snap
---
source: tests/requests/auth.rs
expression: "(response.status_code(), response.text())"
---
(
    200,
    "{\"message\":\"Password has been changed successfully.\"}",
)
