service/tests/requests/snapshots/auth/can_get_current_user_with_access_cookie@auth.snap
---
source: tests/requests/auth.rs
expression: "(response.status_code(), response.headers(), response.text())"
---
(
    200,
    {
        "content-type": "application/json",
        "content-length": "NUMBER",
    },
    "{\"pid\":\"PID\",\"email\":\"john.doe@acme.com\",\"name\":\"John Doe\",\"image\":\"https://randomuser.me/api/portraits/men/32.jpg\",\"verified\":true,\"createdAt\":\"DATEZ\",\"updatedAt\":\"DATEZ\"}",
)
