service/tests/requests/snapshots/auth/can_successfully_login_user@auth.snap
---
source: tests/requests/auth.rs
expression: "(response.status_code(), response.headers(),response.text())"
---
(
    200,
    {
        "authorization": "Bearer JWT",
        "set-cookie": "access_token=JWT; HttpOnly; SameSite=Lax; Path=/; Max-Age=900",
        "set-cookie": "refresh_token=JWT; HttpOnly; SameSite=Lax; Path=/; Max-Age=604800",
        "content-length": "NUMBER",
    },
    "{\"pid\":\"PID\",\"email\":\"john.doe@silk.com\",\"name\":\"John Doe\",\"token\":\"JWT\",\"verified\":true}",
)
