service/tests/requests/snapshots/auth/can_successfully_register_user@auth.snap
---
source: tests/requests/auth.rs
assertion_line: 110
expression: "(response.status_code(), response.text())"
---
(
    201,
    "{\"message\":\"User registered successfully. Please check your email to verify your account.\"}",
)
