service/tests/requests/snapshots/auth/can_successfully_reset_password@auth.snap
---
source: tests/requests/auth.rs
assertion_line: 400
expression: "(response.status_code(), response.headers(), response.text())"
---
(
    200,
    {
        "content-type": "application/json",
        "content-length": "NUMBER",
    },
    "{\"message\":\"Password has been reset successfully.\"}",
)
