service/tests/requests/snapshots/auth/can_successfully_verify_email@auth.snap
---
source: tests/requests/auth.rs
assertion_line: 277
expression: "(response.status_code(), response.text())"
---
(
    200,
    "{\"message\":\"Email verified successfully\"}",
)
