service/tests/requests/snapshots/auth/can_update_current_user_with_access_cookie@auth.snap
---
source: tests/requests/auth.rs
expression: "(response.status_code(), response.headers(), response.text())"
---
(
    200,
    {
        "content-type": "application/json",
        "content-length": "NUMBER",
    },
    "{\"pid\":\"PID\",\"email\":\"john.updated@acme.com\",\"name\":\"John Updated\",\"verified\":true,\"createdAt\":\"DATEZ\",\"updatedAt\":\"DATEZ\"}",
)
