service/tests/requests/snapshots/auth/cannot_change_password_without_credentials@auth.snap
---
source: tests/requests/auth.rs
expression: "(response.status_code(), response.text())"
---
(
    401,
    "{\"error\":\"Authentication is required. Please sign in and try again.\",\"code\":\"missing_credentials\"}",
)
