service/tests/requests/snapshots/auth/cannot_update_current_user_when_email_already_exists@auth.snap
---
source: tests/requests/auth.rs
expression: "(response.status_code(), response.headers(), response.text())"
---
(
    409,
    {
        "content-type": "application/json",
        "content-length": "NUMBER",
    },
    "{\"error\":\"User with email already exists\",\"code\":\"entity_already_exists\"}",
)
